[tool.poetry]
name = "udal-pokapok"
version = "0.1.0"
description = "POKaPOK's Uniform Data Access Layer (UDAL) implementation"
authors = ["Clément Weber <clement.weber@pokapok.org>", "Jorge Mendes <jorge.mendes@vliz.be>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pokapok" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
beautifulsoup4 = "^4.12.3"
copernicusmarine = "^1.3.3"
requests = "^2.32.3"
xarray = "^2024.9.0"
scipy = "^1.14.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
